--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "elastic-apm-node": "^4.10.0",
     "express": "^4.21.2",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "winston-elasticsearch": "^0.19.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
