--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "elastic-apm-node": "^4.10.0",
     "express": "^4.21.2",
     "winston": "^3.17.0",
